# APC-project

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
client/: CMakeLists.txt
client/src/: connection.cpp  connection.hpp  main.cpp
cmake/: Dependencies.cmake
docs/: architecture.md  protocol.md  requirements.md
server/: CMakeLists.txt
server/src/: main.cpp  session.cpp  session.hpp
server/users/: users.json
shared/: CMakeLists.txt
shared/include/minidrive/: commands.hpp  protocol.hpp  version.hpp
shared/src/: commands.cpp  protocol.cpp  version.cpp
tests/: CMakeLists.txt
tests/integration/: smoke.cpp
